--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ if(head.x===food.x && head.y===food.y){
 function gameOver(){ alert('Game Over! Score: '+score+' | Level: '+level); resetGame(); }
 
 // Reset
-function resetGame(level = 1;
-speed = 100;){ snake=[{x:10,y:10}]; food={x:15,y:15}; dx=0; dy=0; score=0; level=1; speed=100; document.getElementById('score').textContent =
+function resetGame(){ level = 1;
+speed = 100; document.getElementById('score').textContent =
 'Score: 0 | Level: 1'; }
 
 // Keyboard (Desktop)
